--- a/m1/w1/d2/esercizio/index.html
+++ b/m1/w1/d2/esercizio/index.html
@@ -117,7 +117,7 @@
                     un test di validazione potrà essere fatto tramite il tool <a
                         href="https://jigsaw.w3.org/css-validator/" title="validator" target="_blank">online</a>
                     dedicato allo scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro obbiettivo ed essere
-                    stati dei veri developers come loro:
+                    stati dei veri developers come loro: <br>
 
                     <!-- video yotube-->
 
@@ -195,7 +195,6 @@
         </footer>
 
     </div>
-
 
 </body>
 
