--- a/m1/w1/d2/esercizio/index.html
+++ b/m1/w1/d2/esercizio/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <div class="conteiner">
+    <div class="container">
         <header>
 
             <img src="assets/img/logo.svg" alt="Logo Epicode">
