--- a/m1/w1/d3/Esercizio/curriculum.html
+++ b/m1/w1/d3/Esercizio/curriculum.html
@@ -13,7 +13,7 @@
 
     <body>
         <header>
-            <h1>Curriculum vitae <br> <span>Mario Rossi</span></h1>
+            <h1>Curriculum vitae <span>Mario Rossi</span></h1>
             <h2>Web developer &amp; Consulente SEO</h2>
         </header>
 
