--- a/m1/w1/progetto/start/index.html
+++ b/m1/w1/progetto/start/index.html
@@ -64,7 +64,7 @@
 
             <blockquote>
                 <h2>Epicode garantisce</h2>
-                <p>"3 mesi intensivi di corso che cambieranno radicalmente la tua vita".</p><cite>Mario Rossi<p>CEO, Epicode</p></cite>
+                <p>"3 mesi intensivi di corso che cambieranno radicalmente la tua vita".</p><cite>Mario Rossi<p>CEO,Epicode</p></cite>
 
             </blockquote>
 
@@ -95,8 +95,9 @@
             <h4>Contattaci</h4>
             <address>
                 <b><i class="fa-solid fa-square-phone"></i> <a href="tel:(+39) 11223456">(+39) 11223456"</a></b>
-                <b><i class="fa-solid fa-square-envelope"></i> <a href="mailto: info@epicode.school">info@epicode.school</a></b>
-                <b><i class="fa-solid fa-square-arrow-up-right"></i >Via Appaia 1 - 00100 Roma (RM)</b>
+                <b><i class="fa-solid fa-square-envelope"></i> <a
+                        href="mailto: info@epicode.school">info@epicode.school</a></b>
+                <b><i class="fa-solid fa-square-arrow-up-right"></i> Via Appaia 1 - 00100 Roma (RM)</b>
             </address>
 
             <p>&copy; 2021, Immagini di <a href="https://pixabay.com/" target="_blank"> pixabay</a></p>
