--- a/m1/w1/progetto/start/index.html
+++ b/m1/w1/progetto/start/index.html
@@ -94,10 +94,10 @@
         <footer>
             <h4>Contattaci</h4>
             <address>
-                <b><i class="fa-solid fa-square-phone"></i> <a href="tel:(+39) 11223456">(+39) 11223456"</a></b>
+                <b><i class="fa-solid fa-square-phone"></i> <a href="tel:(+39) 11223456" target="_blank">(+39) 11223456"</a></b>
                 <b><i class="fa-solid fa-square-envelope"></i> <a
-                        href="mailto: info@epicode.school">info@epicode.school</a></b>
-                <b><i class="fa-solid fa-square-arrow-up-right"></i> Via Appaia 1 - 00100 Roma (RM)</b>
+                        href="mailto: info@epicode.school" target="_blank">info@epicode.school</a></b>
+                <b><i class="fa-solid fa-square-arrow-up-right"></i> <a href="https://www.google.com/maps/place/Via+Appia+Nuova,+1,+00182+Roma+RM" target="_blank">Via Appaia 1 - 00100 Roma (RM)</a></b>
             </address>
 
             <p>&copy; 2021, Immagini di <a href="https://pixabay.com/" target="_blank"> pixabay</a></p>
