--- a/m1/w1/progetto/start/index.html
+++ b/m1/w1/progetto/start/index.html
@@ -33,7 +33,7 @@
                     Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono arrichire il CV, tu pensa ad
                     arrichire le tue competenze.
                 </p>
-                <a href="https://epicode.com/" target="_blank">Partiamo! </a>
+                <a href="https://epicode.com/" target="_blank" class="button">Partiamo!</a>
 
             </section>
 
