--- a/m1/w2/d1/esercizio-w2-d1/articolo.html
+++ b/m1/w2/d1/esercizio-w2-d1/articolo.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="assets/css/all.css">
         <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/stile.css">
+        <link rel="stylesheet" href="assets/css/responsive.css">
     </head>
     <body id="top">
         <header>
