--- a/m1/w2/d3/grid/index.html
+++ b/m1/w2/d3/grid/index.html
@@ -35,6 +35,20 @@
         <aside class="blocco">ASIDE</aside>
         <footer class="blocco">FOOTER</footer>
     </section>
+
+    <h3></h3>
+    <section class="container" id="n4">
+        <div class="blocco">1</div>
+        <div class="blocco">2</div>
+        <div class="blocco">3</div>
+        <div class="blocco">4</div>
+        <div class="blocco">1</div>
+        <div class="blocco">2</div>
+        <div class="blocco">3</div>
+        <div class="blocco">4</div>
+        <div class="blocco">4</div>
+        
+    </section>
 </body>
 
 </html>
