--- a/m1/w2/d2/menu/index.html
+++ b/m1/w2/d2/menu/index.html
@@ -14,6 +14,11 @@
     
     <header id="main-header">
         <nav>
+
+            <label for="toggle">Menu</label>
+
+            <input id="toggle" type="checkbox">
+            
             <ul id="menu">
                 <li><a href="#">Home</a></li>
                 <li>
