--- a/m1/w2/progetto-w2/start/index.html
+++ b/m1/w2/progetto-w2/start/index.html
@@ -103,7 +103,7 @@
         <h4><i class="fa-regular fa-face-laugh"></i> Chi sarai</h4>
         <p>Il creatore delle app che usi tutti i giorni</p>
 
-        <h4><i class="fa-regular fa-lemon"></i>Chi diventerai</h4>
+        <h4><i class="fa-regular fa-lemon"></i> Chi diventerai</h4>
         <p>Lo specialista del suo tempo e spazio</p>
 
         <h4><i class="fa-regular fa-face-meh"></i> Chi non sarai</h4>
@@ -138,7 +138,7 @@
         <h5>Iscriviti alla newsletter</h5>
 
         <form>
-          <input type="email" placeholder="Inserisci l'email" required>
+          <input type="email"  required>
           <input type="submit" value="Va bene!" class="button">
         </form>
 
