--- a/m1/w2/progetto-w2/start/contatti.html
+++ b/m1/w2/progetto-w2/start/contatti.html
@@ -36,7 +36,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="chi-siamo.html">Chi siamo</a></li>
           <li><a href="contatti.html">Contatti</a></li>
-          <li><a href="#" class="register">Registarti</a></li>
+          <li><a href="#" class="register">Registrati</a></li>
         </ul>
 
       </nav>
@@ -61,10 +61,10 @@
         </form>
         
       </div>
-      
+
       <div>
 
-        <h4>Sede Informativa</h4>
+        <h4>Sede formativa</h4>
         <p>Via Appia 1 <span>00100 Roma(RM)</span></p>
 
         <p>info@epicode.school <span>+39 0612345956</span></p>
@@ -91,7 +91,7 @@
 
       <div>
 
-        <h5>Ti piace ciò che vedi?<span>Condividilo con i tuoi amici!</span></h5>
+        <h5>Ti piace ciò che vedi? <span>Condividilo con i tuoi amici!</span></h5>
 
         <a href="#" target="_blank"><i class="fa-brands fa-facebook-square"></i></a>
         <a href="#" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
@@ -99,7 +99,7 @@
       </div>
 
       <div>
-        <h5>Iscriviti alla newsletter</h5>
+        <h5>Iscriviti alla nostra newsletter</h5>
 
         <form>
           <input type="email" required>
@@ -111,7 +111,7 @@
     </div>
 
     <div class="copyright">
-      <p> &copy; 2021 Epicode Web Developer school - Via appia 1, 00100 Roma(RM) - Tel. 06-12345678</p>
+      <p> &copy; 2021 Epicode Web Developer school - Via Appia 1, 00100 Roma (RM) - Tel. 06-12345678</p>
     </div>
 
   </footer>
