--- a/m1/w2/progetto-w2/start/index.html
+++ b/m1/w2/progetto-w2/start/index.html
@@ -36,7 +36,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="chi-siamo.html">Chi siamo</a></li>
           <li><a href="contatti.html">Contatti</a></li>
-          <li><a href="#" class="register">Registarti</a></li>
+          <li><a href="#" class="register">Registrati</a></li>
         </ul>
         
       </nav>
@@ -58,7 +58,7 @@
     <section class="exposition">
 
 
-      <h3>Perchè diventare un Developer?</h3>
+      <h3>Perché diventare un Developer?</h3>
       <p>Non servono laurea e competenze specifiche, solo impegno. <span>Segui il corso online, dove vuoi tu.</span> Il lavoro che andrai a fare è veramente figo.</p>
 
       <div class="summary">
@@ -72,7 +72,7 @@
           <i class="fa-solid fa-location-dot"></i>
           <h4>Potrai lavorare dove vuoi</h4>
           <p>Non serve lavorare in ufficio per essere creatori di prodotti digitali, e le aziende lo sanno. Lavora da
-            casa,in riva al mare o in montagna.</p>
+            casa, in riva al mare o in montagna.</p>
           </div>
           
           <div>
@@ -88,7 +88,7 @@
     <section class="contact-us">
 
       <h3>Ma chi è il Developer oggi?</h3>
-      <p>Se non lo sai te lo diciamo moi: il futuro è dei developer</p>
+      <p>Se non lo sai te lo diciamo noi: il futuro è dei developer</p>
       <a href="#" class="button">Scrivici!</a>
 
     </section>
@@ -104,7 +104,7 @@
         <p>Il creatore delle app che usi tutti i giorni</p>
 
         <h4><i class="fa-regular fa-lemon"></i> Chi diventerai</h4>
-        <p>Lo specialista del suo tempo e spazio</p>
+        <p>Lo specialista padrone del suo tempo e spazio</p>
 
         <h4><i class="fa-regular fa-face-meh"></i> Chi non sarai</h4>
         <p>Il nerd incollato allo schermo</p>
@@ -127,7 +127,7 @@
 
       <div>
 
-        <h5>Ti piace ciò che vedi?<span>Condividilo con i tuoi amici!</span></h5>
+        <h5>Ti piace ciò che vedi? <span>Condividilo con i tuoi amici!</span></h5>
 
         <a href="#" target="_blank"><i class="fa-brands fa-facebook-square"></i></a>
         <a href="#" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
@@ -135,7 +135,7 @@
       </div>
 
       <div>
-        <h5>Iscriviti alla newsletter</h5>
+        <h5>Iscriviti alla nostra newsletter</h5>
 
         <form>
           <input type="email"  required>
@@ -147,7 +147,7 @@
     </div>
 
     <div class="copyright">
-      <p> &copy; 2021 Epicode Web Developer school - Via appia 1, 00100 Roma(RM) - Tel. 06-12345678</p>
+      <p> &copy; 2021 Epicode Web Developer school - Via Appia 1, 00100 Roma (RM) - Tel. 06-12345678</p>
     </div>
 
   </footer>
