--- a/m1/w2/progetto-w2/start/chi-siamo.html
+++ b/m1/w2/progetto-w2/start/chi-siamo.html
@@ -37,7 +37,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="chi-siamo.html">Chi siamo</a></li>
           <li><a href="contatti.html">Contatti</a></li>
-          <li><a href="#" class="register">Registarti</a></li>
+          <li><a href="#" class="register">Registrati</a></li>
         </ul>
 
       </nav>
@@ -76,7 +76,7 @@
         <thead>
           <tr>
             <th>BASE 500€ +IVA</th>
-            <th>INTERMEDO 1000€ +IVA</th>
+            <th>INTERMEDIO 1000€ +IVA</th>
             <th>AVANZATO 2000€ +IVA</th>
           </tr>
         </thead>
@@ -89,7 +89,7 @@
           </tr>
           <tr>
             <td>Supporto post corso</td>
-            <td>Rateizazzione 12 mesi</td>
+            <td>Rateazione in 12 mesi</td>
             <td>Video registrazioni</td>
           </tr>
           <tr>
@@ -122,7 +122,7 @@
           </tr>
           <tr>
             <th>Intermedio 1000€</th>
-            <td>Rateizazzione 12 mesi</td>
+            <td>Rateazione in 12 mesi</td>
           </tr>
           <tr>
             <th>Avanzato 2000€</th>
@@ -162,7 +162,7 @@
 
       <div>
 
-        <h5>Ti piace ciò che vedi?<span>Condividilo con i tuoi amici!</span></h5>
+        <h5>Ti piace ciò che vedi? <span>Condividilo con i tuoi amici!</span></h5>
 
         <a href="#" target="_blank"><i class="fa-brands fa-facebook-square"></i></a>
         <a href="#" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
@@ -170,7 +170,7 @@
       </div>
 
       <div>
-        <h5>Iscriviti alla newsletter</h5>
+        <h5>Iscriviti alla nostra newsletter</h5>
 
         <form>
           <input type="email"  required>
@@ -182,7 +182,7 @@
     </div>
 
     <div class="copyright">
-      <p> &copy; 2021 Epicode Web Developer school - Via appia 1, 00100 Roma(RM) - Tel. 06-12345678</p>
+      <p> &copy; 2021 Epicode Web Developer school - Via Appia 1, 00100 Roma (RM) - Tel. 06-12345678</p>
     </div>
 
   </footer>
