--- a/m1/w2/progetto-w2/start/chi-siamo.html
+++ b/m1/w2/progetto-w2/start/chi-siamo.html
@@ -45,8 +45,8 @@
     </div>
   </header>
 
-  <main>
-    <section class="we-are">
+  <main class="we-are">
+
 
       <h2>We are coder</h2>
 
@@ -144,7 +144,6 @@
         </tbody>
       </table>
 
-    </section>
 
 
   </main>
