--- a/m1/w2/progetto-w2/start/contatti.html
+++ b/m1/w2/progetto-w2/start/contatti.html
@@ -65,12 +65,12 @@
       <div>
 
         <h4>Sede formativa</h4>
-        <p>Via Appia 1 <span>00100 Roma(RM)</span></p>
+        <p><a href="https://www.google.com/maps/place/Via+Appia+Nuova,+1,+00182+Roma+RM" target="_blank">Via Appia 1 <span>00100 Roma(RM)</span></a></p>
 
-        <p>info@epicode.school <span>+39 0612345956</span></p>
+        <p><a href="mailto: info@epicode.school">info@epicode.school </a><span><a href="tel:+39 0612345956" target="_blank">+39 0612345956</a></span></p>
 
         <h4>Lavora con noi</h4>
-        <p>Per poterti candidare ad un ruolo da docente invia il tuo cv a job@epicode.school</p>
+        <p>Per poterti candidare ad un ruolo da docente invia il tuo cv a <a href="mailto: job@epicode.school">job@epicode.school</a></p>
 
       </div>
 
