--- a/m1/w2/progetto-w2/start/index.html
+++ b/m1/w2/progetto-w2/start/index.html
@@ -38,8 +38,8 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="chi-siamo.html">Chi siamo</a></li>
           <li><a href="contatti.html">Contatti</a></li>
-          <li><a href="#" class="register">Registrati</a></li>
-        </ul>
+          <li><a href="http://www.patience-is-a-virtue.org/" class="register" target="_blank">Registrati</a></li>
+        </ul> <!--https://r33b.net/-->
 
       </nav>
 
@@ -55,8 +55,9 @@
         <h1>Diventa un developer EPICO</h1>
         <p>Diventa un developer epico e ti troviamo noi il lavoro. Scommetiamo su di te: paghi metà corso, l'altra metà
           solo quando inizi a lavorare.</p>
-        <a href="#" class="button animation">Chiedi info</a>
-      
+
+            <a href="contatti.html" class="button animation">Chiedi info</a>
+            
       </div>
 
     </section>
@@ -96,7 +97,7 @@
 
       <h3>Ma chi è il Developer oggi?</h3>
       <p>Se non lo sai te lo diciamo noi: il futuro è dei developer</p>
-      <a href="#" class="button">Scrivici!</a>
+      <a href="contatti.html" class="button">Scrivici!</a>
 
     </section>
 
@@ -136,9 +137,9 @@
 
         <h5>Ti piace ciò che vedi? <span>Condividilo con i tuoi amici!</span></h5>
 
-        <a href="#" target="_blank"><i class="fa-brands fa-facebook-square"></i></a>
-        <a href="#" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="#" target="_blank"><i class="fa-brands fa-instagram-square"></i></a>
+        <a href="https://www.facebook.com/epicodeglobal/" target="_blank"><i class="fa-brands fa-facebook-square"></i></a>
+        <a href="https://www.linkedin.com/school/epicodeitalia/people/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://www.instagram.com/epicode.global/" target="_blank"><i class="fa-brands fa-instagram-square"></i></a>
       </div>
 
       <div>
