--- a/m1/w2/progetto-w2/start/contatti.html
+++ b/m1/w2/progetto-w2/start/contatti.html
@@ -20,28 +20,33 @@
 </head>
 
 <body>
+
   <header>
 
-    <div class="container">
+    <div class="container"></div>
 
-      <img src="assets/images/logo.png" alt="">
+    <div class="navigator">
 
-      <nav>
+      <div><img src="assets/images/logo.png" alt="logo" class="logo"></div>
 
-        <label for="toggle"><i class="fa-solid fa-bars"></i></label>
 
-        <input id="toggle" type="checkbox">
+      <input id="toggle" type="checkbox">
 
-        <ul id="menu-toggle">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="chi-siamo.html">Chi siamo</a></li>
-          <li><a href="contatti.html">Contatti</a></li>
-          <li><a href="#" class="register">Registrati</a></li>
-        </ul>
+      <label for="toggle" class="button-container">
+        <div class="menu-button"></div>
+        <div class="menu-button"></div>
+        <div class="menu-button"></div>
+      </label>
 
-      </nav>
+      <ul class="menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="chi-siamo.html">Chi siamo</a></li>
+        <li><a href="contatti.html">Contatti</a></li>
+        <li><a href="https://r33b.net/" class="register" target="_blank">Registrati</a></li>
+      </ul>
 
     </div>
+
   </header>
 
   <main class="contact">
@@ -50,27 +55,30 @@
 
     <section class="summary">
 
-      <div> 
+      <div>
 
         <form>
           <input class="name" type="text" placeholder="Nome e cognome" required>
           <input class="mail" type="email" placeholder="Indirizzo valido nome@casella.com" required>
           <textarea class="message" name="Text1" cols="40" rows="5" placeholder="Scrivi in breve il tuo messaggio"
-          required></textarea>
+            required></textarea>
           <input class="button" type="submit" value="Invia il messaggio">
         </form>
-        
+
       </div>
 
       <div>
 
         <h4>Sede formativa</h4>
-        <p><a href="https://www.google.com/maps/place/Via+Appia+Nuova,+1,+00182+Roma+RM" target="_blank">Via Appia 1 <span>00100 Roma(RM)</span></a></p>
+        <p><a href="https://www.google.com/maps/place/Via+Appia+Nuova,+1,+00182+Roma+RM" target="_blank">Via Appia 1
+            <span>00100 Roma(RM)</span></a></p>
 
-        <p><a href="mailto: info@epicode.school">info@epicode.school </a><span><a href="tel:+39 0612345956" target="_blank">+39 0612345956</a></span></p>
+        <p><a href="mailto: info@epicode.school">info@epicode.school </a><span><a href="tel:+39 0612345956"
+              target="_blank">+39 0612345956</a></span></p>
 
         <h4>Lavora con noi</h4>
-        <p>Per poterti candidare ad un ruolo da docente invia il tuo cv a <a href="mailto: job@epicode.school">job@epicode.school</a></p>
+        <p>Per poterti candidare ad un ruolo da docente invia il tuo cv a <a
+            href="mailto: job@epicode.school">job@epicode.school</a></p>
 
       </div>
 
@@ -93,9 +101,12 @@
 
         <h5>Ti piace ciò che vedi? <span>Condividilo con i tuoi amici!</span></h5>
 
-        <a href="#" target="_blank"><i class="fa-brands fa-facebook-square"></i></a>
-        <a href="#" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="#" target="_blank"><i class="fa-brands fa-instagram-square"></i></a>
+        <a href="https://www.facebook.com/epicodeglobal/" target="_blank"><i
+            class="fa-brands fa-facebook-square"></i></a>
+        <a href="https://www.linkedin.com/school/epicodeitalia/people/" target="_blank"><i
+            class="fa-brands fa-linkedin"></i></a>
+        <a href="https://www.instagram.com/epicode.global/" target="_blank"><i
+            class="fa-brands fa-instagram-square"></i></a>
       </div>
 
       <div>
