--- a/m1/w2/progetto-w2/start/index.html
+++ b/m1/w2/progetto-w2/start/index.html
@@ -24,26 +24,30 @@
 
   <header>
 
-    <div class="container">
+    <div class="container"></div>
 
-      <img src="assets/images/logo.png" alt="">
+    <div class="navigator">
 
-      <nav>
+      <div><img src="assets/images/logo.png" alt="logo" class="logo"></div>
 
-        <label for="toggle"><i class="fa-solid fa-bars"></i></label>
 
-        <input id="toggle" type="checkbox">
+      <input id="toggle" type="checkbox">
 
-        <ul id="menu-toggle">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="chi-siamo.html">Chi siamo</a></li>
-          <li><a href="contatti.html">Contatti</a></li>
-          <li><a href="http://www.patience-is-a-virtue.org/" class="register" target="_blank">Registrati</a></li>
-        </ul> <!--https://r33b.net/-->
+      <label for="toggle" class="button-container">
+        <div class="menu-button"></div>
+        <div class="menu-button"></div>
+        <div class="menu-button"></div>
+      </label>
 
-      </nav>
+      <ul class="menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="chi-siamo.html">Chi siamo</a></li>
+        <li><a href="contatti.html">Contatti</a></li>
+        <li><a href="https://r33b.net/" class="register" target="_blank">Registrati</a></li>
+      </ul>
 
     </div>
+
   </header>
 
   <main>
@@ -53,11 +57,11 @@
       <div>
 
         <h1>Diventa un developer EPICO</h1>
-        <p>Diventa un developer epico e ti troviamo noi il lavoro. Scommetiamo su di te: paghi metà corso, l'altra metà
+        <p>Diventa un developer epico e ti troviamo noi il lavoro. Scommettiamo su di te: paghi metà corso, l'altra metà
           solo quando inizi a lavorare.</p>
 
-            <a href="contatti.html" class="button animation">Chiedi info</a>
-            
+        <a href="contatti.html" class="button animation">Chiedi info</a>
+
       </div>
 
     </section>
@@ -73,7 +77,7 @@
         <div>
           <i class="fa-solid fa-comment-dots"></i>
           <h4>Tutti ti cercheranno</h4>
-          <p>Sono 30.000 in Italia le posizioni di developer scoperte, scegli quella che ti stimola di più</p>
+          <p>Sono 30.000 in Italia le posizioni di developer scoperte, scegli quella che ti stimola di più.</p>
         </div>
 
         <div>
@@ -137,9 +141,12 @@
 
         <h5>Ti piace ciò che vedi? <span>Condividilo con i tuoi amici!</span></h5>
 
-        <a href="https://www.facebook.com/epicodeglobal/" target="_blank"><i class="fa-brands fa-facebook-square"></i></a>
-        <a href="https://www.linkedin.com/school/epicodeitalia/people/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="https://www.instagram.com/epicode.global/" target="_blank"><i class="fa-brands fa-instagram-square"></i></a>
+        <a href="https://www.facebook.com/epicodeglobal/" target="_blank"><i
+            class="fa-brands fa-facebook-square"></i></a>
+        <a href="https://www.linkedin.com/school/epicodeitalia/people/" target="_blank"><i
+            class="fa-brands fa-linkedin"></i></a>
+        <a href="https://www.instagram.com/epicode.global/" target="_blank"><i
+            class="fa-brands fa-instagram-square"></i></a>
       </div>
 
       <div>
