--- a/m1/w2/progetto-w2/start/chi-siamo.html
+++ b/m1/w2/progetto-w2/start/chi-siamo.html
@@ -23,126 +23,130 @@
 
   <header>
 
-    <div class="container">
+    <div class="container"></div>
 
-      <img src="assets/images/logo.png" alt="">
+    <div class="navigator">
 
-      <nav>
+      <div><img src="assets/images/logo.png" alt="logo" class="logo"></div>
 
-        <label for="toggle"><i class="fa-solid fa-bars"></i></label>
 
-        <input id="toggle" type="checkbox">
+      <input id="toggle" type="checkbox">
 
-        <ul id="menu-toggle">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="chi-siamo.html">Chi siamo</a></li>
-          <li><a href="contatti.html">Contatti</a></li>
-          <li><a href="#" class="register">Registrati</a></li>
-        </ul>
+      <label for="toggle" class="button-container">
+        <div class="menu-button"></div>
+        <div class="menu-button"></div>
+        <div class="menu-button"></div>
+      </label>
 
-      </nav>
+      <ul class="menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="chi-siamo.html">Chi siamo</a></li>
+        <li><a href="contatti.html">Contatti</a></li>
+        <li><a href="https://r33b.net/" class="register" target="_blank">Registrati</a></li>
+      </ul>
 
     </div>
+
   </header>
 
   <main class="we-are">
 
 
-      <h2>We are coder</h2>
+    <h2>We are coder</h2>
 
-      <p>Epicode School nasce con l’obiettivo di rivoluzionare la formazione in ambito tech. Vogliamo essere il
-        movimento dei creatori digitali che il mercato richiede: formiamo, forniamo e aggiorniamo specialisti con la
-        missione di trasformare le aziende dall’interno e offrire ai giovani sicure prospettive di carriera. Siamo a
-        Roma ma arriviamo in tutta Italia, per creare la community che rivoluzionerà il mondo del lavoro.
-      </p>
+    <p>Epicode School nasce con l’obiettivo di rivoluzionare la formazione in ambito tech. Vogliamo essere il
+      movimento dei creatori digitali che il mercato richiede: formiamo, forniamo e aggiorniamo specialisti con la
+      missione di trasformare le aziende dall’interno e offrire ai giovani sicure prospettive di carriera. Siamo a
+      Roma ma arriviamo in tutta Italia, per creare la community che rivoluzionerà il mondo del lavoro.
+    </p>
 
-      <div class="summary">
-        <div>
-          <img src="assets/images/foto1.jpg" alt="laptop 1">
-          <p>Investiamo sul tuo talento e vogliamo dimostrartelo: effettua un colloquio di selezione per accedere ad una
-            delle 5 borse di studio disponibili.</p>
-        </div>
-
-        <div>
-          <img src="assets/images/foto2.jpg" alt="laptop 2">
-          <p>Riceverai subito l'esito, quindi ti consigliamo di contattarci prima che le borse si esauriscano e
-            candidati subito</p>
-        </div>
-
+    <div class="summary">
+      <div>
+        <img src="assets/images/foto1.jpg" alt="laptop 1">
+        <p>Investiamo sul tuo talento e vogliamo dimostrartelo: effettua un colloquio di selezione per accedere ad una
+          delle 5 borse di studio disponibili.</p>
       </div>
 
-      <table id="courses">
-        <caption>Prezzi dei corsi</caption>
-        <thead>
-          <tr>
-            <th>BASE 500€ +IVA</th>
-            <th>INTERMEDIO 1000€ +IVA</th>
-            <th>AVANZATO 2000€ +IVA</th>
-          </tr>
-        </thead>
+      <div>
+        <img src="assets/images/foto2.jpg" alt="laptop 2">
+        <p>Riceverai subito l'esito, quindi ti consigliamo di contattarci prima che le borse si esauriscano e
+          candidati subito</p>
+      </div>
 
-        <tbody>
-          <tr>
-            <td>30 ore di formazione</td>
-            <td>Tutte le caratteristiche del corso base</td>
-            <td>Tutte le caratteristiche del corso intermedio</td>
-          </tr>
-          <tr>
-            <td>Supporto post corso</td>
-            <td>Rateazione in 12 mesi</td>
-            <td>Video registrazioni</td>
-          </tr>
-          <tr>
-            <td>Stage aziendale</td>
-            <td>Ripetizione del corso</td>
-            <td>Supporto 24h dedicato</td>
-          </tr>
-        </tbody>
-      </table>
+    </div>
 
-      <table id="courses-mobile">
-        <caption>Prezzi dei corsi</caption>
-        <tbody>
-          <tr class="even">
-            <th>Base 500€</th>
-            <td>30 ore di formazione</td>
-          </tr>
-          <tr class="even">
-            <th>Intermedio 1000€</th>
-            <td>Tutte le caratteristiche del corso base</td>
-          </tr>
-          <tr class="even">
-            <th>Avanzato 2000€</th>
-            <td>Tutte le caratteristiche del corso intermedio</td>
-          </tr>
+    <table id="courses">
+      <caption>Prezzi dei corsi</caption>
+      <thead>
+        <tr>
+          <th>BASE 500€ +IVA</th>
+          <th>INTERMEDIO 1000€ +IVA</th>
+          <th>AVANZATO 2000€ +IVA</th>
+        </tr>
+      </thead>
 
-          <tr>
-            <th>Base 500€</th>
-            <td>Supporto post corso</td>
-          </tr>
-          <tr>
-            <th>Intermedio 1000€</th>
-            <td>Rateazione in 12 mesi</td>
-          </tr>
-          <tr>
-            <th>Avanzato 2000€</th>
-            <td>Video registrazioni</td>
-          </tr>
+      <tbody>
+        <tr>
+          <td>30 ore di formazione</td>
+          <td>Tutte le caratteristiche del corso base</td>
+          <td>Tutte le caratteristiche del corso intermedio</td>
+        </tr>
+        <tr>
+          <td>Supporto post corso</td>
+          <td>Rateazione in 12 mesi</td>
+          <td>Video registrazioni</td>
+        </tr>
+        <tr>
+          <td>Stage aziendale</td>
+          <td>Ripetizione del corso</td>
+          <td>Supporto 24h dedicato</td>
+        </tr>
+      </tbody>
+    </table>
 
-          <tr class="even">
-            <th>Base 500€</th>
-            <td>Stage aziendale</td>
-          </tr>
-          <tr class="even">
-            <th>Intermedio 1000€</th>
-            <td>Ripetizione del corso</td>
-          </tr>
-          <tr class="even">
-            <th>Avanzato 2000€</th>
-            <td>Supporto 24h dedicato</td>
-          </tr>
-        </tbody>
-      </table>
+    <table id="courses-mobile">
+      <caption>Prezzi dei corsi</caption>
+      <tbody>
+        <tr class="even">
+          <th>Base 500€</th>
+          <td>30 ore di formazione</td>
+        </tr>
+        <tr class="even">
+          <th>Intermedio 1000€</th>
+          <td>Tutte le caratteristiche del corso base</td>
+        </tr>
+        <tr class="even">
+          <th>Avanzato 2000€</th>
+          <td>Tutte le caratteristiche del corso intermedio</td>
+        </tr>
+
+        <tr>
+          <th>Base 500€</th>
+          <td>Supporto post corso</td>
+        </tr>
+        <tr>
+          <th>Intermedio 1000€</th>
+          <td>Rateazione in 12 mesi</td>
+        </tr>
+        <tr>
+          <th>Avanzato 2000€</th>
+          <td>Video registrazioni</td>
+        </tr>
+
+        <tr class="even">
+          <th>Base 500€</th>
+          <td>Stage aziendale</td>
+        </tr>
+        <tr class="even">
+          <th>Intermedio 1000€</th>
+          <td>Ripetizione del corso</td>
+        </tr>
+        <tr class="even">
+          <th>Avanzato 2000€</th>
+          <td>Supporto 24h dedicato</td>
+        </tr>
+      </tbody>
+    </table>
 
 
 
@@ -163,16 +167,19 @@
 
         <h5>Ti piace ciò che vedi? <span>Condividilo con i tuoi amici!</span></h5>
 
-        <a href="#" target="_blank"><i class="fa-brands fa-facebook-square"></i></a>
-        <a href="#" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="#" target="_blank"><i class="fa-brands fa-instagram-square"></i></a>
+        <a href="https://www.facebook.com/epicodeglobal/" target="_blank"><i
+            class="fa-brands fa-facebook-square"></i></a>
+        <a href="https://www.linkedin.com/school/epicodeitalia/people/" target="_blank"><i
+            class="fa-brands fa-linkedin"></i></a>
+        <a href="https://www.instagram.com/epicode.global/" target="_blank"><i
+            class="fa-brands fa-instagram-square"></i></a>
       </div>
 
       <div>
         <h5>Iscriviti alla nostra newsletter</h5>
 
         <form>
-          <input type="email"  required>
+          <input type="email" required>
           <input type="submit" value="Va bene!" class="button">
         </form>
 
