--- a/m1/w3/d2/esercitazione-w3d2/index.html
+++ b/m1/w3/d2/esercitazione-w3d2/index.html
@@ -17,9 +17,12 @@
     <div class="top"></div>
     <div class="mid"></div>
     <div class="bot"></div>
+    <div>riga:</div>
     <input type="text" id="asse-x" placeholder="inserisci  asse x: 1 - 2 - 3"/>
+    <div>colonna:</div>
     <input type="text" id="asse-y" placeholder="inserisci  asse y: 1 - 2 - 3 "/>
     <button onclick="verifica()">inserisci</button>
+    <button onclick="reset()">reset</button>
     <div class="messaggio">tocca a x</div>
 
 
