--- a/m1/w3/d2/esercitazione-w3d2/index.html
+++ b/m1/w3/d2/esercitazione-w3d2/index.html
@@ -13,7 +13,7 @@
     <div class="result"></div>
     <hr>
     
-    <div>tetris:</div>
+    <div>tris:</div>
     <div class="top"></div>
     <div class="mid"></div>
     <div class="bot"></div>
