--- a/m1/w3/d3/lezione/funzioni-freccia.html
+++ b/m1/w3/d3/lezione/funzioni-freccia.html
@@ -41,7 +41,7 @@
         console.log(fn5(6,1));
 
         /* 
-        * la parola chiave this all interno delle fun freccia ha un comportamento anomalo, perchè le f freccia sono anonime
+        * la parola chiave this all interno delle fun freccia ha un comportamento anomalo, perchè le fun freccia sono anonime
         */
 
         let fn6 = () => this 
