--- a/m2/w1/d4/lezione/ajax.html
+++ b/m2/w1/d4/lezione/ajax.html
@@ -21,6 +21,11 @@
         }
 
         call(); 
+
+        
+        fetch ('https://jsonplaceholder.typicode.com/users')
+        .then(res =>res.json())
+        .then(res =>res.json())
     </script>
 </body>
 </html>
