--- a/m2/w1/progetto/PROGETTO-start/index.html
+++ b/m2/w1/progetto/PROGETTO-start/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" />
 
     <link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -22,14 +24,18 @@
     <div class="container text-center">
         <input type="button" id="button" class="button" onclick=startGame() value="Ricomincia">
         <div class="timer">Tempo: 0 min 0 sec</div>
-        <div class = "click"></div>
+        <div class="click"></div>
     </div>
 
     <div id="modal">
         <div class="content">
             <h2>Congratulazioni! Hai risolto il gioco in: </h2>
             <p><span id="tempoTrascorso"> </span></p>
-            <p><input type="button" class="button" onclick=playAgain() value="Altra partita"></p>
+            <p>
+                <input type="button" class="button" onclick=playAgain() value="Altra partita">
+                <input type="button" class="button" value="Salva">
+                <input type="button" class="button" value="Mostra Top 5">
+            </p>
         </div>
     </div>
 
