--- a/m2/w1/progetto/PROGETTO-start/index.html
+++ b/m2/w1/progetto/PROGETTO-start/index.html
@@ -31,9 +31,15 @@
         <div class="content">
             <h2>Congratulazioni! Hai risolto il gioco in: </h2>
             <p><span id="tempoTrascorso"> </span></p>
+            <input type="text" class="name" placeholder="Inserisci nome utente">
             <p>
                 <input type="button" class="button" onclick=playAgain() value="Altra partita">
+                <input type="button" class="button save" value="Salva punteggio">
+                <input type="button" class="button reset" value="Resetta Top 5">
             </p>
+
+            <div id="leaderboard"></div>
+
         </div>
     </div>
 
