--- a/m2/w1/progetto/PROGETTO-start/index.html
+++ b/m2/w1/progetto/PROGETTO-start/index.html
@@ -31,7 +31,7 @@
         <div class="content">
             <h2>Congratulazioni! Hai risolto il gioco in: </h2>
             <p><span id="tempoTrascorso"> </span></p>
-            <input type="text" class="name" placeholder="Inserisci nome utente">
+            <input type="text" class="name" placeholder="Inserisci nome utente" maxlength="10">
             <p>
                 <input type="button" class="button" onclick=playAgain() value="Altra partita">
                 <input type="button" class="button save" value="Salva punteggio">
