--- a/m2/w2/d3/esercitazione/index.html
+++ b/m2/w2/d3/esercitazione/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,15 +9,30 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-    <header>
+    <header class="banner-header">
 
-        <div>
+        <div class="container">
+
             <a href="#">Logo</a>
+
+            <section class="container-menu">
+
+                <button class="btn">Bottone 1</button>
+                <button class="btn">Bottone 2</button>
+
+            </section>
+
         </div>
 
     </header>
-    
+
+    <section>
+        <img src="https://picsum.photos/900/650" alt="foto" class="photo">
+    </section>
+
 </body>
+
 </html>
