--- a/m2/w3/progetto/index.html
+++ b/m2/w3/progetto/index.html
@@ -27,6 +27,8 @@
 
     <div id="target" class="container-fluid row m-auto mt-3 gap-sm-3 justify-content-center"></div>
 
+
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/script.js"></script>
     <script src="assets/js/form.js"></script>
