--- a/m3/w1/d1/esercitazione/index.html
+++ b/m3/w1/d1/esercitazione/index.html
@@ -10,10 +10,10 @@
 
     <h3>Genera un numero</h3>
     <p>Giocatore 1 ha scelto</p>    
-    <input type="number" max='100' id="g1">
+    <input type="number" min="0" max='100' id="g1">
 
     <p>Giocatore 2 ha scelto</p>    
-    <input type="number" max='100' id="g2">
+    <input type="number" min="0" max='100' id="g2">
 
     <h3 id="rand">Il numero estratto è: </h3>
 
