--- a/m3/w1/progetto/SmartphonePro/index.html
+++ b/m3/w1/progetto/SmartphonePro/index.html
@@ -16,7 +16,7 @@
 
     </main>
 
-    <script type="module" src="script.js" defer async></script>
+    <script type="module" src="js/script.js" defer async></script>
 
 </body>
 
